objects/Interview__c.object
<CustomObject>
    <fields>
        <fullName>Age_of_Student__c</fullName>
        <formula>IF(! ISBLANK( Birthdate__c ) , FLOOR( (TODAY() - Birthdate__c )/365.2425) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_etc__c</fullName>
        <label>CD etc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camps__c</fullName>
        <label>Camps</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Goals__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Career Goals</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church_Involvement__c</fullName>
        <label>Church Involvement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_ed__c</fullName>
        <label>Co-ed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concerns__c</fullName>
        <label>Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current School</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stakeholder</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students interviewed</relationshipLabel>
        <relationshipName>StudentsInterviewed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Issues__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Family Issues</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Costs__c</fullName>
        <label>Fees/Costs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friends_at_SACS__c</fullName>
        <label>Friends at SACS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Issues__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Health Issues</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Support__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Learning Support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maths__c</fullName>
        <label>Maths</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Music__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Music</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Hobbies_Interests__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Other Hobbies/Interests</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Notes_Families_Concerns__c</fullName>
        <label>Other Notes/Families Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_joining_SACS__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Reason for joining SACS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <label>Reports</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sibling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sibling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sport__c</fullName>
        <inlineHelpText>Points separated with comma.</inlineHelpText>
        <label>Sport</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sports_Program__c</fullName>
        <label>Sports Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stages__c</fullName>
        <label>Stages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <inlineHelpText>Describe the strengths of the student separated with comma.</inlineHelpText>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uniform_Behavior__c</fullName>
        <label>Uniform/Behavior</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <inlineHelpText>Describe the weaknesses of the student separated with comma</inlineHelpText>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_11_12_IB_HSC_Subjects__c</fullName>
        <label>Year 11,12 IB HSC Subjects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_8_language__c</fullName>
        <label>Year 8 language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_9_10_Electives__c</fullName>
        <label>Year 9,10 Electives</label>
        <type>TextArea</type>
    </fields>
    <label>Interview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Interview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>